MBS-11069: Fix diff highlighting of white spaces (#1691)
Browsers omit the rendering of trailing white spaces by default when
they wrap content to fit the width of the containing element.
In case the white spaces are part of the highlighted differences, they
should be rendered before line wraps as well.

--- a/root/static/styles/layout.less
+++ b/root/static/styles/layout.less
@@ -895,6 +895,10 @@ tr.diff-removal {
     background: @negative-bg;
 }
 
+.diff-only-a, .diff-only-b {
+    white-space: pre-wrap;
+}
+
 /* Statistics pages */
 table.timeline-controls, table.database-statistics {
     border-collapse: collapse;
